--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,14 @@
-[*.{js,jsx,ts,tsx,vue}]
+# http://editorconfig.org
+root = true
+
+[*]
+charset = utf-8
 indent_style = space
 indent_size = 2
 end_of_line = lf
-trim_trailing_whitespace = true
 insert_final_newline = true
-max_line_length = 100
+trim_trailing_whitespace = true
+
+[*.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
