--- a/.env.staging
+++ b/.env.staging
@@ -4,5 +4,5 @@ NODE_ENV = production
 ENV = 'staging'
 
 # base api
-VUE_APP_BASE_API = 'http://211.149.213.189:8081/api'
+VUE_APP_BASE_API = 'http://www.100rebate.com/api'
 
