--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = 'http://211.149.213.189:8081/api'
+VUE_APP_BASE_API = 'http://www.100rebate.com/api'
 
